tests/expectations/parser-expression/expression/array_init_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_0:1:2
     |
   1 | [...0u8; 1]
     |  ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_1:1:2
     |
   1 | [...0; 1]
     |  ^^
Error [EPAR0370005]: expected ] -- found ';'
    --> test_2:1:3
     |
   1 | [0; ()]
     |   ^
Error [EPAR0370005]: expected ] -- found ';'
    --> test_3:1:3
     |
   1 | [0; (1)]
     |   ^
